--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.10.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-preset-next": "^1.4.0",
+    "net": "^1.0.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
